# fastapi-rs

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci
app/: auth.py  config.py  database.py  main.py  models.py  rust_api.py  schemas.py  utils.py
app/routers/: __init__.py  item.py  rust_routes.py  user.py
app/services/: compress_service.py  crypto_service.py  data_service.py  file_service.py  filter_service.py  network_service.py  random_service.py  validation_service.py
fastapi/: __init__.py  _rust.py  encoders.py  params.py  routing.py  utils.py
fastapi/params/: __init__.py  base.py  body.py  cookie.py  dependencies.py  file.py  form.py  header.py  params.py  path.py  query.py  schema.py  utils.py
fastapi/routing/: __init__.py  http_methods.py  websocket.py
fastapi/security/: __init__.py  utils.py
rust_src/: lib.rs  python_bindings.rs
rust_src/core/: mod.rs  request.rs  routing.rs
rust_src/params/: body.rs  mod.rs  path.rs  query.rs  validation.rs
rust_src/routing/: mod.rs  path_compiler.rs  route_matcher.rs  route_model.rs  route_tree.rs
rust_src/security/: mod.rs  oauth2.rs  utils.rs
rust_src/serialization/: decoders.rs  encoders.rs  mod.rs
rust_src/types/: mod.rs  models.rs
rust_src/utils/: async_tools.rs  content_type.rs  id_generation.rs  mod.rs  type_conv.rs
rustlib/: Cargo.toml  build.rs
rustlib/src/: compress.rs  data_proc.rs  file_ops.rs  filter.rs  hashing.rs  lib.rs  net_utils.rs  random.rs  random_utils.rs  regex_utils.rs
tests/rust/common/: mod.rs
tests/rust/integration/: test_integration_fastapi.rs  test_integration_routing.rs  test_routing_intertration.rs
tests/rust/unit/: test_routing.rs  test_security.rs  test_serialization.rs  test_validation.rs
tests/rust/unit/routing/: mod.rs  test_path_compiler.rs  test_route_matcher.rs  test_route_model.rs  test_route_tree.rs
