[package]
name = "fastapi-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["pavanepour.k"]
license = "MIT"
description = "High-performance Rust implementation for FastAPI core components"
repository = "https://github.com/pavanepour-k/fastapi-rs"
keywords = ["fastapi", "web", "api", "async", "performance"]
categories = ["web-programming", "asynchronous"]
readme = "README.md"

[lib]
name = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
dashmap = "6.1"
ahash = "0.8"
bytes = "1.7"
memchr = "2.7"
smallvec = { version = "1.13", features = ["const_generics"] }
arrayvec = "0.7"
thiserror = "2.0.12"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.22"
percent-encoding = "2.3"
mime = "0.3"
http = "1.1"
hyper = { version = "1.4", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[build-dependencies]
pyo3-build-config = "0.25.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[features]
default = ["simd"]
simd = []
jemalloc = ["dep:jemallocator"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }

[[bench]]
name = "routing_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false
