[package]
name = "rustlib"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustlib"
crate-type = ["cdylib"]

[dependencies]

# PyO3 for Python bindings
pyo3 = { version = "0.25", features = ["extension-module"] }

# Utilities: regex, lazy_static
regex = "1.10"
lazy_static = "1.4"

# HTML sanitization
ammonia = "4.1"

# Cryptographic hashing
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hmac = "0.12"

# File operations
crc32fast = "1.3"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Random utilities
rand = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Data processing: JSON and CSV
serde_json = "1.0"
csv = "1.1"

# Networking
reqwest = { version = "0.12", features = ["blocking"] }

[build-dependencies]
pyo3-build-config = "0.25"